fixed the thickness of the constellation svgs, introduced some weird white space

--- a/Components/Pages/ProfessionalSection.razor.css
+++ b/Components/Pages/ProfessionalSection.razor.css
@@ -79,9 +79,11 @@
 }
 
 .constellation {
+  padding: 0.5rem;
   color: white;
   overflow: visible !important;
   width: 75%;
+  stroke-width: 0.1px;
 }
 
 .prof-body-right {
