--- a/Resources/Styles/ProfessionalSection.scss
+++ b/Resources/Styles/ProfessionalSection.scss
@@ -87,10 +87,11 @@
 }
 
 .constellation {
-    //padding: 1rem;
+    padding: .5rem;
     color: white;
     overflow: visible !important;
     width: 75%;
+    stroke-width: .1px;
 }
 
 .contellation-left {
